--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.11.4",
     "@syncfusion/ej2-angular-inputs": "^20.1.47",
     "bootstrap": "^5.1.3",
+    "ng-cdbangular": "^1.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.3",
     "rxjs": "~7.5.0",
